fix: better display on mobile

--- a/apps/www/src/app/page.module.css
+++ b/apps/www/src/app/page.module.css
@@ -1,10 +1,9 @@
 .main {
-  display: flex;
   min-height: 100vh;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 6rem;
+
+  @media (width >= 800) {
+    padding: 6rem;
+  }
 }
 
 .description {
